syntax = "proto3";
package ShareRing.shareledger.document;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "document/tx.proto";
// import "cosmos/base/query/v1beta1/pagination.proto";

option go_package = "github.com/ShareRing/Shareledger/x/document/types";

// Query defines the gRPC querier service.
service Query {
    rpc DocumentByProof(QueryDocumentByProofRequest) returns (QueryDocumentByProofResponse) {
        option (google.api.http).get = "/shareledger/document/proof/{proof}";
    }

    rpc DocumentByHolderId(QueryDocumentByHolderIdRequest) returns (QueryDocumentByHolderIdResponse) {
        option (google.api.http).get = "/shareledger/document/holder/{id}";
    }
}

message QueryDocumentByProofRequest {
    option (gogoproto.equal)           = false;
    option (gogoproto.goproto_getters) = false;

    string proof = 1;
}

message QueryDocumentByProofResponse {
	Document document = 1;
}

message QueryDocumentByHolderIdRequest {
    option (gogoproto.equal)           = false;
    option (gogoproto.goproto_getters) = false;

    string id = 1;
}

message QueryDocumentByHolderIdResponse {
	repeated Document document = 1;
}
