syntax = "proto3";
package shareledger.document;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/sharering/shareledger/x/document/types";

// Msg defines the Msg service.
service Msg {
  rpc CreateDocument(MsgCreateDocument) returns (MsgCreateDocumentResponse);
  rpc CreateDocuments(MsgCreateDocuments) returns (MsgCreateDocumentsResponse);
  rpc RevokeDocument(MsgRevokeDocument) returns (MsgRevokeDocumentResponse);
  rpc UpdateDocument(MsgUpdateDocument) returns (MsgUpdateDocumentResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgCreateDocument {
  string data = 1;
  string holder = 2;
  string issuer = 3;
  string proof = 4;
}

message MsgCreateDocumentResponse {
}

message MsgCreateDocuments {
  repeated string data = 1;
  repeated string holder = 2;
  string issuer = 3;
  repeated string proof = 4;
}

message MsgCreateDocumentsResponse {
}

message MsgRevokeDocument {
  string holder = 1;
  string issuer = 2;
  string proof = 3;
}

message MsgRevokeDocumentResponse {
}

message MsgUpdateDocument {
  string data = 1;
  string holder = 2;
  string issuer = 3;
  string proof = 4;
}

message MsgUpdateDocumentResponse {
}

// this line is used by starport scaffolding # proto/tx/message